# onepw_receiver

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: requirements.txt
src/onepw_receiver/: __init__.py  credentials.py  onepassword_item.py  rich_configs.py  usersettings.py
