[project]
name = "onepw-receiver"
version = "0.1.2"
description = "A Package to receive Passwords and other items from your OnePassword Server"
authors = [
    { name = "Veronika Haberzettl", email = "vroni@salala.de" },
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "onepasswordconnectsdk",
    "python-dotenv",
    "rich",
    "tomli",
    "tomlkit"
]

[project.urls]
Issues = "https://github.com/nvgbr/onepw_receiver/issues"


[project.optional-dependencies]
dev = ["black", "mypy", "isort"]


[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["onepw_receiver*"]  # package names should match these glob patterns (["*"] by default)


[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 99
extra_standard_library = ["pytest"]

[tool.mypy]
warn_return_any = false
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
