[project]
name = "onepw-receiver"
version = "0.1.4"
description = "A Package to receive Passwords and other items from your OnePassword Server"
authors = [
    { name = "Veronika Haberzettl", email = "vroni@salala.de" },
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "onepasswordconnectsdk",
    "python-dotenv",
    "rich",
    "tomli",
    "tomlkit",
]

[project.urls]
Issues = "https://github.com/nvgbr/onepw_receiver/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/onepw_receiver"]
