[project]
name = "onepw-receiver"
version = "0.1.5"
description = "A Package to receive Passwords and other items from your OnePassword Server"
authors = [
    { name = "Veronika Haberzettl", email = "vroni@salala.de" },
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "onepasswordconnectsdk",
    "python-dotenv",
    "rich",
    "tomli",
    "tomlkit",
]

[project.urls]
Issues = "https://github.com/nvgbr/onepw_receiver/issues"
[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "hatchling>=1.27.0",
    "ruff>=0.9.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
cache-dir = "D:/.uv_cache"
package = true
extra-index-url = ['https://pypi.org/simple', "https://download.pytorch.org/whl/cu126"]


#[tool.rye]
#managed = true
#dev-dependencies = [
#    "ruff>=0.6.4",
#]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/onepw_receiver"]
